# spl

./: .dockerignore  .gitignore  Dockerfile  INSTALL.MD  INSTALL_AND_RUN.MD  LICENSE  README.md  TESTING.MD  docker-compose.yml  pyproject.toml  pytest.ini
config/: example.drift_live.toml  example.hyperliquid.toml  example.shadow.toml
plugins/spl-adapter-drift/: Readme.md  pyproject.toml
plugins/spl-adapter-drift/src/spl_adapter_drift/: __init__.py  adapter.py  async_bridge.py  backend.py  client.py  drift_market_poll.py  execution_live.py  market_data.py  symbols.py
plugins/spl-adapter-drift/src/spl_adapter_drift/.old/: adapter_2nd.py.py  adapter_original.py
plugins/spl-adapter-drift/src/wheels/: driftpy-0.8.80-py3-none-any.whl
plugins/spl-adapter-drift/tests/: rpc.py
plugins/spl-adapter-hyperliquid/: pyproject.toml
plugins/spl-adapter-hyperliquid/src/spl_adapter_hyperliquid/: __init__.py  adapter.py  backend.py
src/spl/adapters/: hyperliquid.py  mock.py
src/spl/cli/: helpers.py  main.py  resolve.py
src/spl/core/: utils.py
src/spl/engine/: engine.py
src/spl/exec/: backend_drift.py  backend_hyperliquid.py  backend_paper.py
src/spl/mock_adapter/: mock.py
src/spl/risk/: allow_all.py  basic.py
src/spl/storage/: sqlite_store.py
src/spl/strategies/: demo.py
src/spltrader/cli/: helpers.py  list_adapters.py  main.py  resolve.py
src/spltrader/core/: interfaces.py  types.py
src/spltrader/engine/: fill_paper.py  fill_shadow.py
src/spltrader/exec/: backend_shadow.py
src/spltrader/storage/: sqlite_store.py
src/spltrader/strategies/: demo.py  demo_market_tick.py
tests/: db_sanity_checks.sh  test_hyperliquid_ws.py  test_store_fills.py
