[tool.poetry]
name = "spl-trader"
version = "0.1.0"
description = "SPL — Shadow - Paper - Live execution engine"
readme = "README.md"
license = "MIT"
keywords = ["trading", "paper-trading", "shadow-execution", "solana"]
packages = [{ include = "spltrader", from = "src" }]


[tool.poetry.dependencies]
python = "^3.11"  
click = "^8.1.7"
orjson = "^3.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
# keeping old (spl) entrypoint for convenience
spl = "spltrader.cli.main:run"
spltrader = "spltrader.cli.main:run"
spl-list-adapters = "spltrader.cli.list_adapters:list_adapters"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
