[tool.poetry]
name = "spl-adapter-drift"
version = "0.1.0"
description = "SPL adapter: Drift"
packages = [{ include = "spl_adapter_drift", from = "src" }]

[tool.poetry.dependencies]
driftpy = {path = "src/wheels/driftpy-0.8.80-py3-none-any.whl"}
python = "^3.11"
anyio = "^4"
orjson = "^3.9"
spl-trader = {path = "../../", develop = true}
httpx = "^0.28.1"

[tool.poetry.plugins."spltrader.adapters"]
drift = "spl_adapter_drift.adapter:DriftMarket"
